--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="image_src" href="iso_proto.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="paweł waleczek"/>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="/canvasquery.js"></script>
-    <script src="/engine.js"></script>
+    <script src="canvasquery.js"></script>
+    <script src="engine.js"></script>
     <style>
       body {
         margin: 0;
@@ -41,7 +40,6 @@
     </style>
   </head>
   <body>
-    <canvas></canvas>
     <script type="text/javascript">
       Utils.attachEvent(window, 'load', function() {
         Engine.initialize();
