--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>paweł waleczek</title>
     <title>Paweł Waleczek</title>
+    <meta name="google-site-verification" content="MWFkdDdneEqSzpbj8ClqoIhs2LE0XNJ2dPjJ1wfEYu4" />
     <meta charset="utf-8" />
     <meta name="robots" content="all" />
     <meta name="author" content="paweł waleczek" />
