--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Paweł Waleczek</title>
     <meta name="google-site-verification" content="MWFkdDdneEqSzpbj8ClqoIhs2LE0XNJ2dPjJ1wfEYu4" />
+    <meta name="description" content="I do stuff. No, but really. ">
     <meta charset="utf-8" />
     <meta name="robots" content="all" />
     <meta name="author" content="paweł waleczek" />
@@ -297,6 +298,8 @@
       <h2>Paweł Waleczek</h2>
       <p>
         <a href="mailto:pawel@thisismyasterisk.org">pawel@thisismyasterisk.org</a>
+        <br />
+        <a href="https://github.com/pwaleczek">GitHub</a>
         <br />
         <a href="https://facebook.com/pawel.waleczek">facebook.com/pawel.waleczek</a>
         <br />
