--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Paweł Waleczek</title>
     <meta name="google-site-verification" content="MWFkdDdneEqSzpbj8ClqoIhs2LE0XNJ2dPjJ1wfEYu4" />
-    <meta name="description" content="I do stuff. No, but really. ">
+    <meta name="description" content="I do stuff. No, but really.">
+    <link rel="author" href="http://plus.google.com/+PawełWaleczek/about" />
     <meta charset="utf-8" />
     <meta name="robots" content="all" />
     <meta name="author" content="paweł waleczek" />
