--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta name="robots" content="all" />
     <meta name="author" content="paweł waleczek" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="/dat.gui.js"></script>
     <style type="text/css" media="screen, print">
       html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure,  footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
