--- a/knapff.html
+++ b/knapff.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Knapff</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/public/style.css">
     <script type="text/javascript" src="/public/canvasquery.js"></script>
     <script type="text/javascript" src="/public/dat.gui.js"></script>
     <script type="text/javascript" src="/public/app.js"></script>
