--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
           N += 0.001 * s(D /C * (d - i) * opt.d)
           for (j = y(H / d); j--;) {
 
-            V += 0.001 * f(D * i * opt.e)
+            V += 0.001 * f(D * i * opt.d)
             B += 0.00001 * s(D * (d - i) * opt.c)
             h = (opt.f * 4 + 1) * i * s(D) + 100 * f(D * (C + B) / opt.a * V)
-            t = (opt.c * 4 + 1) * j * f((3 < opt.b) ? f(1/h) : f(1 / D)) + 100 * opt.e * s(D * (N + B) * opt.f / 720)
+            t = (opt.c * 4 + 1) * j * f((3 < opt.b) ? f(1/h) : f(1 / D)) + 100 * opt.e * s(D * (N + B) * opt.d§ / 720)
 
             k = ((opt.d + 1) * (i + j) * opt.d * opt.b) * 50 * f(D * (s(d - i) * h + (j - d) * h) * opt.d / 720)
 
