--- a/iso.html
+++ b/iso.html
@@ -20,6 +20,36 @@
         padding: 0;
         -webkit-overflow-scrolling: touch;
       }
+
+      /* 1.25 dpr */
+      @media
+      (-webkit-min-device-pixel-ratio: 1.25),
+      (min-resolution: 120dpi){
+/*          canvas { transform: scale();}
+*/      }
+
+      /* 1.3 dpr */
+      @media
+      (-webkit-min-device-pixel-ratio: 1.3),
+      (min-resolution: 124.8dpi){
+          /* Retina-specific stuff here */
+      }
+
+      /* 1.5 dpr */
+      @media
+      (-webkit-min-device-pixel-ratio: 1.5),
+      (min-resolution: 144dpi){
+          /* Retina-specific stuff here */
+      }
+
+      @media
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi) {
+          /* Retina-specific stuff here */
+        canvas { transform: scale(0.5, 0.5); }
+
+      }
+
       .goHome {
         background-color: #E8175D;
         bottom: 1em;
@@ -46,10 +76,10 @@
   <body>
     <script type="text/javascript">
       Utils.attachEvent(window, 'load', function() {
-        Engine.initialize();
-      });
+        Engine.initialize()
+      })
 
-
+      // google analytics
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-23939407-3']);
       _gaq.push(['_trackPageview']);
