--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
         <br />
         <a href="http://pl.linkedin.com/pub/paweł-waleczek/53/316/533/">linkedin</a>
         <br />
+        <br />       
+        <a href="/iso.html">linkedin</a>
+        <br />
         <br />
         &copy; 2015, Paweł Waleczek
       </p>
