--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <a href="http://pl.linkedin.com/pub/paweł-waleczek/53/316/533/">linkedin</a>
         <br />
         <br />       
-        <a href="/iso.html">linkedin</a>
+        <a href="/iso.html">Some boring stuff</a>
         <br />
         <br />
         &copy; 2015, Paweł Waleczek
