--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <br />
         <a href="https://github.com/pwaleczek">GitHub</a>
         <br />
-        <a href="https://facebook.com/pawel.waleczek">facebook.com/pawel.waleczek</a>
+        <a href="https://facebook.com/ijustdostuff">fb.com/ijustdostuff</a>
         <br />
         <a href="https://twitter.com/pwaleczek">@pwaleczek</a>
         <br />
